package lab09.Ex1_b;

enum User { OWNER, COMPANY }
